// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb > renders with item slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="">
  <ol data-slot="list" class="">
    <li data-slot="item" class=""><a href="/" data-slot="link">Item slot</a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><span class="iconify i-lucide:chevron-right" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class=""><span data-slot="link">Item slot</span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><span class="iconify i-lucide:chevron-right" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class=""><a href="/components/breadcrumb" data-slot="link"><span class="iconify i-lucide:link" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with item-leading slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="">
  <ol data-slot="list" class="">
    <li data-slot="item" class=""><a href="/" data-slot="link">Item leading slot<span data-slot="linkLabel" class="">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><span class="iconify i-lucide:chevron-right" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class=""><span data-slot="link">Item leading slot<span data-slot="linkLabel" class="">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><span class="iconify i-lucide:chevron-right" aria-hidden="true" data-slot="separatorIcon"></span></li>
    <li data-slot="item" class=""><a href="/components/breadcrumb" data-slot="link"><span class="iconify i-lucide:link" aria-hidden="true" data-slot="linkLeadingIcon"></span><span data-slot="linkLabel" class="">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;
